dataset1235/2025-2/805158916/users/1354266131/executions/2651470117_704983377.log
== RUN (2025-08-25 14:19:49)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1=x//y
q2=x%y
q3=x/y






print(Q1)
print(q2)
print(q3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
7.0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
1.6
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
2.0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
26.5
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
173.0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
173.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:12:51)
-- CODE: 
x = int(input()
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:17:02)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1<-x//y







print("valor: ", Q1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1<-x//y
    ^^
NameError: name 'Q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:21:34)
-- CODE: 
x = int(input())
y = int(input())
Q1=x//y
q2=x%y
q3=x/y
q4=x*y
q5=y**3


print(Q1)
print(q2)
print(q3)
print(q4)
print(q5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:14:59)
-- CODE: 
x = int(input("insira o valor de x: ")
print("valor: ", x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:14:58)
-- CODE: 
x = int(input("insira o valor de x: ")
print("valor: ", x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:21:19)
-- CODE: 
x = int(input())
y = int(input())
Q1=x//y
q2=x%y
q3=x/y
q4=x*y
q5=y**3


print(Q1)
print(q2)
print(q3)
print(q4)
print(q5)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:23)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1=x//y
q2=x%y







print(Q1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
insira o valor de x: insira o valor de y: 7
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
insira o valor de x: insira o valor de y: 1
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
insira o valor de x: insira o valor de y: 2
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
insira o valor de x: insira o valor de y: 26
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
insira o valor de x: insira o valor de y: 173
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
insira o valor de x: insira o valor de y: 173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:17:39)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1=x//y







print("valor: ", Q1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
insira o valor de x: insira o valor de y: valor:  7
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
insira o valor de x: insira o valor de y: valor:  1
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
insira o valor de x: insira o valor de y: valor:  2
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
insira o valor de x: insira o valor de y: valor:  26
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
insira o valor de x: insira o valor de y: valor:  173
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
insira o valor de x: insira o valor de y: valor:  173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:15:15)
-- CODE: 
x = int(input("insira o valor de x: "))
print("valor: ", x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
insira o valor de x: valor:  14
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
insira o valor de x: valor:  8
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
insira o valor de x: valor:  10
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
insira o valor de x: valor:  53
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
insira o valor de x: valor:  346
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
insira o valor de x: valor:  347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:12:25)
-- CODE: 
x = int(input()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:13:37)
-- CODE: 
x = int(input("insira o valor de x: ")
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input("insira o valor de x: ")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:01)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1=x//y
q2=x%y







print(Q1)
print(q2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
1
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:21:36)
-- CODE: 
x = int(input())
y = int(input())
Q1=x//y
q2=x%y
q3=x/y
q4=x*y
q5=y**3


print(Q1)
print(q2)
print(q3)
print(q4)
print(q5)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:12:49)
-- CODE: 
x = int(input()
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    x = int(input()
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:03)
-- CODE: 
x = int(input("insira o valor de x: "))
y = int(input("insira o valor de y: "))
Q1=x//y
q2=x%y







print(Q1)
print(q2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
1
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
